--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-my pages
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>GitHub网页</title>
+		<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+	</head>
+
+	<body>
+		<button id="on">开</button>
+		<button id="off">关</button>
+		<script>
+			
+		</script>
+	</body>
+
+</html>
