--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<button id="off">关</button>
 		<script>
 			$(document).ready(function(){
-				$("#on").click(()=>{fetch('https://cloud.arest.io/d82co4/led?params=1')});
-				$("#off").click(()=>{fetch('https://cloud.arest.io/d82co4/led?params=0')});
+				$("#on").click(()=>{fetch('https://cloud.arest.io/espcl0/led?params=1')});
+				$("#off").click(()=>{fetch('https://cloud.arest.io/espcl0/led?params=0')});
 			});
 		</script>
 	</body>
