--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- 控制网页中的部分布局 -->
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <title>古诗词网页</title>
+    <title>古诗词网页 -- designed by 马兴</title>
 </head>
 
 
@@ -22,4 +22,3 @@
 
 
 </html>
-
